fix: input/textarea gap

--- a/frontend/src/components/inputs/index.module.scss
+++ b/frontend/src/components/inputs/index.module.scss
@@ -1,4 +1,8 @@
 .Input {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
   input {
     width: 100%;
     padding: 8px 16px;
