--- a/frontend/src/components/textarea/styles.module.scss
+++ b/frontend/src/components/textarea/styles.module.scss
@@ -1,4 +1,7 @@
 .Textarea {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   min-width: 100%;
 
   textarea {
